fix(templates): title are visible in rich text

--- a/mangmap/static/css/mangmap.css
+++ b/mangmap/static/css/mangmap.css
@@ -175,3 +175,18 @@
     color: grey;
     font-style: italic;
 }
+
+.rich-text h2 {
+    font-size: 2.5rem;
+    font-weight: 600;
+}
+
+.rich-text h3 {
+    font-size: 2rem;
+    font-weight: 550;
+}
+
+.rich-text h4 {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
